<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical" >

    <RelativeLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:id="@+id/rl_content_front_painel"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp">

        <TextView
            android:id="@+id/tv_name_app_scaffold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <ImageView
            android:id="@+id/iv_icon_launcher_app"
            android:layout_width="100dp"
            android:layout_below="@+id/tv_name_app_scaffold"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/ic_launcher_round" />


        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_icon_launcher_app"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/text_activity_splash_screen_wellcome"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ProgressBar
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_content_front_painel"
        android:layout_centerHorizontal="true"
        android:id="@+id/pb_content_front" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="12dp"
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:text="@string/text_activity_splash_screen_link_repository_project" />

</RelativeLayout>